added custom domain email to contact section :smiling_imp:

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="contact">
             <div class="within">
                 <p><span class="one" tabindex="1">Get in touch.</span>
-                    <span class="two" tabindex="2">hello@placeholder.co</span>
+                    <span class="two" tabindex="2">hello@placeholder.online</span>
                 </p>
             </div>   
         </section>
