decorations :smiling_imp:

--- a/index.html
+++ b/index.html
@@ -13,28 +13,34 @@
 <body>
     <main>
         <section class="header">
-            <i class="far fa-star"></i>
+            <i class="far fa-star a"></i>
             <div class="within">
                 <p>Placeholder is a creative agency.</p>
             </div>
-            <i class="fas fa-star-of-life"></i>
+            <i class="far fa-star b"></i>
         </section>
         <section class="about">
+            <i class="far fa-star c"></i>
             <div class="within">
                 <p>We think design makes art work.</p>
-            </div>    
+            </div>
+            <i class="far fa-star d"></i>
         </section>
         <section class="cases">
+            <i class="far fa-star a"></i>
             <div class="within">
                 <p><a href="#portfolio">View our case studies.</a></p>
-            </div>   
+            </div>
+            <i class="far fa-star b"></i>
         </section>
         <section class="contact">
+            <i class="far fa-star c"></i>
             <div class="within">
                 <p><span class="one" tabindex="1">Get in touch.</span>
                     <span class="two" tabindex="2">hello@placeholder.online</span>
                 </p>
-            </div>   
+            </div>  
+            <i class="far fa-star d"></i>
         </section>
     </main>
 </body>
