--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placeholder is a creative agency.</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
     <!-- Pavanam -->
     <link href="https://fonts.googleapis.com/css2?family=Pavanam&display=swap" rel="stylesheet">
