added portfolio item :nail_care:

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +12,16 @@
     <!-- Pavanam -->
     <link href="https://fonts.googleapis.com/css2?family=Pavanam&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/f5dc03632a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
+
 <body>
     <main>
         <section class="header">
             <i class="far fa-star a"></i>
             <div class="within">
-                <p>Placeholder is a creative agency.</p>
+                <h1>Placeholder is a creative agency.</h1>
             </div>
             <i class="far fa-star b"></i>
         </section>
@@ -42,9 +45,29 @@
                 <p><span class="one" tabindex="1">Get in touch.</span>
                     <span class="two" tabindex="2">hello@placeholder.online</span>
                 </p>
-            </div>  
+            </div>
             <i class="far fa-star b"></i>
         </section>
     </main>
+    <aside class="portfolio" id="portfolio">
+        <div class="exit">
+            <i class="far fa-times-circle"></i>
+        </div>
+        <ul>
+            <li>
+                <h2>AGO Rebrand</h2>
+                <p>The Art Gallery of Ontario (AGO) is one of the longest standing art institutions in Canada. With a revitalized vision towards reframing what constitutes Canadian art, affecting new acquisitions, exhibitions and programming, a visual rebranding is opportune. Placeholder presents a new vision for a new decade, titled Design Makes Art Work: a modular, playful, and scalable design system for the AGO.
+                </p>
+                <img src="assets/agoUXMockup.jpg"
+                    alt="A comprehensive mockup demonstrating Placeholder's rebrand for the Art Gallery of Ontario as a web product.">
+            </li>
+        </ul>
+    </aside>
+    <!-- jQuery -->
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js'
+        integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <!-- Script -->
+    <script src="./scripts/index.js"></script>
 </body>
+
 </html>
