fixing flex in portfolio

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         </div>
         <ul>
             <li>
-                <h2>AGO Rebrand</h2>
-                <div>
-                    <p>Designers: Elora Crawford and Lucas Regazzi</p>
-                    <p>Client: AGO</p>
-                    <p>Product: Branding, Logo, Design System, Website Design</p>
-                    <p>Brief: The Art Gallery of Ontario (AGO) is one of the longest standing art institutions in Canada. With a revitalized vision towards reframing what constitutes Canadian art, affecting new acquisitions, exhibitions and programming, a visual rebranding is opportune. Placeholder presents a new vision for a new decade, titled Design Makes Art Work: a modular, playful, and scalable design system for the AGO.</p>
+                <div class="case">
+                    <h2>AGO Rebrand</h2>
+                    <div>
+                        <p>Designers: Elora Crawford and Lucas Regazzi</p>
+                        <p>Client: AGO</p>
+                        <p>Product: Branding, Logo, Design System, Website Design</p>
+                        <p>Brief: The Art Gallery of Ontario (AGO) is one of the longest standing art institutions in Canada. With a revitalized vision towards reframing what constitutes Canadian art, affecting new acquisitions, exhibitions and programming, a visual rebranding is opportune. Placeholder presents a new vision for a new decade, titled Design Makes Art Work: a modular, playful, and scalable design system for the AGO.</p>
+                    </div>
                 </div>
                 <img src="assets/agoUXMockup.jpg"
                 alt="A comprehensive mockup demonstrating Placeholder's rebrand for the Art Gallery of Ontario as a web product.">
