updated copy for title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="header">
             <i class="fas fa-circle a"></i>
             <div class="within">
-                <h1 tabindex="1">Placeholder is a creative agency.</h1>
+                <h1 tabindex="1">Placeholder is a creative agency by artists.</h1>
             </div>
             <i class="fas fa-circle b"></i>
         </section>
