--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="./assets/favicon.svg">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- Pavanam -->
-    <link href="https://fonts.googleapis.com/css2?family=Pavanam&display=swap" rel="stylesheet">
+    <!-- Webfonts -->
+    <link rel="stylesheet" href="./webfonts/stylesheet.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
