--- a/index.html
+++ b/index.html
@@ -18,59 +18,21 @@
 
 <body>
     <main>
-        <section class="header">
-            <i class="fas fa-circle a"></i>
-            <div class="within">
-                <h1 tabindex="1">Placeholder is a creative agency by artists.</h1>
-            </div>
-            <i class="fas fa-circle b"></i>
-        </section>
-        <section class="about">
-            <i class="fas fa-circle c"></i>
-            <div class="within">
-                <p tabindex="2">We think design makes art work.</p>
-            </div>
-            <i class="fas fa-circle d"></i>
-        </section>
-        <section class="cases">
-            <i class="fas fa-circle c"></i>
-            <div class="within">
-                <p>
-                    <span class="one" tabindex="3"><a href="#portfolio" tabindex="3">View our case studies.</a></span>
-                    <span class="two" tabindex="4">Coming soon</span>
-                </p>
-            </div>
-            <i class="fas fa-circle d"></i>
-        </section>
-        <section class="contact">
-            <i class="fas fa-circle a"></i>
-            <a href="http://twitter.com/thisisplacehold" target="_blank" title="Clicking here will take you to Placeholder's Twitter profile." tabindex="5"><i class="fab fa-twitter d"></i></a>
-            <div class="within">
-                <p><span class="one" tabindex="7">Get in touch.</span>
-                    <span class="two" tabindex="8">hello@placeholder.online</span>
-                </p>
-            </div>
-            <a href="http://behance.net/thisisplaceholder" target="_blank" title="Clicking here will take you to Placeholder's Behance profile." tabindex="6"><i class="fab fa-behance b"></i></a>
-            <a href="mailto:hello@placeholder.online" target="_blank" title="Clicking here will activate an email to us using your device's mail application." tabindex="9"><i class="fas fa-at c"></i></a>
-        </section>
+            <h1><a href="./index.html" title="Placeholder Index">Placeholder</a> is a creative agency run by artists between New York and Montreal. Placeholder creates design systems for clients. Placeholder clients include entrepreneurs in the field of fashion and art, and small business owners.</h1>
+            <ul>
+                <h2>Links</h2>
+                <li>
+                    <a href="./history">Partners</a>
+                </li>
+                <li>
+                    <a href="./portfolio">Case studies</a>
+                </li>
+                <li>
+                    <a href="./contact">Get in touch</a>
+                </li>
+            </ul>
+        </div>
     </main>
-    <!-- <aside class="portfolio" id="portfolio">
-        <ul>
-            <li>
-                <div class="case">
-                    <h2>AGO Rebrand</h2>
-                    <div>
-                        <p>Designers: Elora Crawford and Lucas Regazzi</p>
-                        <p>Client: AGO</p>
-                        <p>Product: Branding, Logo, Design System, Website Design</p>
-                        <p>Brief: The Art Gallery of Ontario (AGO) is one of the longest standing art institutions in Canada. With a revitalized vision towards reframing what constitutes Canadian art, affecting new acquisitions, exhibitions and programming, a visual rebranding is opportune. Placeholder presents a new vision for a new decade, titled Design Makes Art Work: a modular, playful, and scalable design system for the AGO.</p>
-                    </div>
-                </div>
-                <img src="assets/agoUXMockup.jpg"
-                alt="A comprehensive mockup demonstrating Placeholder's rebrand for the Art Gallery of Ontario as a web product.">
-            </li>
-        </ul>
-    </aside> -->
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.4.0.min.js'
         integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
