line idea design

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="shortcut icon" href="./assets/favicon.svg">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- Webfonts -->
-    <link rel="stylesheet" href="./webfonts/stylesheet.css">
+    <!-- Inter Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
@@ -18,20 +19,31 @@
 
 <body>
     <main>
-            <h1><a href="./index.html" title="Placeholder Index">Placeholder</a> is a creative agency run by artists between New York and Montreal. Placeholder creates design systems for clients. Placeholder clients include entrepreneurs in the field of fashion and art, and small business owners.</h1>
-            <ul>
-                <h2>Links</h2>
-                <li>
-                    <a href="./history">Partners</a>
-                </li>
-                <li>
-                    <a href="./portfolio">Case studies</a>
-                </li>
-                <li>
-                    <a href="./contact">Get in touch</a>
-                </li>
-            </ul>
-        </div>
+        <section class="a">
+            <h1>Placeholder</h1>
+        </section>
+        <section class="a">
+            <h1>*<div class="width"></div>*</h1>
+        </section>
+        <section class="b">
+            <h1>___________</h1>
+        </section>
+        <section class="b">
+            <h1>is a design agency</h1>
+        </section>
+        <section class="b">
+            <h1>[<div class="width"></div>]</h1>
+            <img src="assets/placeholderHands.png">
+        </section>
+        <section class="b">
+            <h1>creates visual identities, websites and applications</h1>
+        </section>
+        <section class="a">
+            <h1>"<div class="width"></div>"</h1>
+        </section>
+        <section class="a">
+            <h1>view case studies</h1>
+        </section>
     </main>
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.4.0.min.js'
