splash and landing with updated wireframe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,34 @@
 
 <body>
     <main>
-        <img src="assets/placeholderHands.png">
+        <div class="splash">
+            <img src="./assets/SplashLogo.png" alt="Placeholder Agency's logo, animated.">
+        </div>
+        <ul>
+            <li class="info">
+                <a href="./info">Info</a>
+            </li>
+            <li class="work">
+                <a href="./work">Work</a>
+            </li>
+            <li class="contact">
+                <a href="./contact">Contact</a>
+            </li>
+            <li class="gif">
+                <p>✦</p>
+            </li>
+        </ul>
+        <div class="container">
+            <div class="hold">
+                <p><span class="icon">[ ] </span>Graphic Design</p><p>[ ]<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">** </span>Case Studies</p><p>**<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">__ </span>Copywriting</p><p>__<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">... </span>Editing</p><p>...<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">✦ </span>Branding</p><p>✦<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">❑ </span>Web Design</p><p>❑<span class="textBrand"> Placeholder</span></p>
+                <p><span class="icon">❍ </span>UX Research</p><p>❍<span class="textBrand"> Placeholder</span></p>
+            </div>
+        </div>
     </main>
     <!-- jQuery -->
     <script src='https://code.jquery.com/jquery-3.4.0.min.js'
