updating splash and adding links on nav

--- a/pages/info.html
+++ b/pages/info.html
@@ -19,18 +19,15 @@
 
 <body>
     <main>
-        <div class="splash">
-            <img src="./assets/SplashLogo.png" alt="Placeholder Agency's logo, animated.">
-        </div>
         <ul>
             <li class="info">
-                <a href="./pages/info.html">Info</a>
+                <a href="/">Info</a>
             </li>
             <li class="work">
-                <a href="./pages/work.html">Work</a>
+                <a href="/pages/work.html">Work</a>
             </li>
             <li class="contact">
-                <a href="./pages/contact.html">Contact</a>
+                <a href="pages/contact.html">Contact</a>
             </li>
             <li class="gif">
                 <p>✦</p>
@@ -38,13 +35,10 @@
         </ul>
         <div class="container">
             <div class="hold">
-                <p><span class="icon">[ ] </span>Graphic Design</p><p>[ ]<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">** </span>Photography</p><p>**<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">__ </span>Copywriting</p><p>__<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">... </span>Editing</p><p>...<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">✦ </span>Branding</p><p>✦<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">❑ </span>Web Design</p><p>❑<span class="textBrand"> Placeholder</span></p>
-                <p><span class="icon">❍ </span>UX Research</p><p>❍<span class="textBrand"> Placeholder</span></p>
+                <p>✦ Placeholder is a creative agency run by artists.</p>
+                <p>✦ Placeholder operates remotely between Brooklyn, Montréal and Toronto.</p>    
+                <p>✦ Placeholder creates visual identities, websites and applications guided by principles of collaboration, play, scale, and accessibility.</p>
+                <p>✦ Placeholder clients include entrepreneurs in the field of fashion and art, and small business owners.</p>
             </div>
         </div>
     </main>
